--- a/index.html
+++ b/index.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My First JS Page</title>
+    <title>JS Button Example</title>
   </head>
   <body>
-    <h1>Hello, JavaScript in HTML!</h1>
+    <h1>Click the Button!</h1>
+
+    <button onclick="sayHello()">Say Hello</button>
+
+    <button onclick="tellJoke()">Tell me a joke</button>
+
     <script>
-      console.log("This code runs from inside the web page!");
-      let message = "Welcome to JavaScript!";
-      console.log(message);
+      function sayHello() {
+        alert("Hello from JavaScript!");
+      }
+
+      function tellJoke() {
+        alert(
+          "There are two hard problems in computer science: naming things, cache invalidation, and off-by-one errors.",
+        );
+      }
     </script>
   </body>
 </html>
